Finishing touches